--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -70,14 +70,12 @@
   "Manage Account": "Gerenciar Conta",
   "Manage and log out your active sessions on other browsers and devices.": "Gerencie e saia de suas sessões ativas em outros navegadores e dispositivos.",
   "Member": "Membro",
-  "Name": "Nome",
   "Nevermind": "Deixa pra lá",
   "New Password": "Nova Senha",
   "Not Found": "Página não encontrada",
   "of": "de",
   "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Depois que sua conta for excluída, todos os seus recursos e dados serão excluídos permanentemente. Antes de excluir sua conta, baixe todos os dados ou informações que deseja reter.",
   "Page Expired": "Página expirada",
-  "Password": "Senha",
   "Payment Required": "Pagamento necessário",
   "Permanently delete your account.": "Deleta permanentemente a sua conta.",
   "Permissions": "Permissões",
@@ -158,5 +156,14 @@
   "You have not enabled two factor authentication.": "Você ainda não habilitou a autenticação de dois fatores.",
   "You may delete any of your existing tokens if they are no longer needed.": "Você deve deletar os tokens sem utilização.",
   "Your email address is unverified.": "Seu endereço de e-mail não foi verificado.",
-  "Photo": "Foto"
+  "Photo": "Foto",
+  "User":"Usuário",
+  "Name":"Nome",
+  "Password":"Senha",
+  "Password confirmation":"Confirme sua senha",
+  "Roles":"Funções",
+  "Permission":"Permissão",
+  "Created at":"Criado em",
+  "Updated at":"Atualizado em",
+  "Email verified at":"E-Mail verificado em"
 }
